Fix for missaligned line numbers

--- a/css/pygments.css
+++ b/css/pygments.css
@@ -1,4 +1,5 @@
 .codehilite > pre > span{font-family:"monospace"}
+.codehilite > pre {font-family:"monospace"}
 .hll { background-color: #ffffcc }
 .c { color: #408080; font-style: italic } /* Comment */
 .err { border: 1px solid #FF0000 } /* Error */
